fix navbar icon spacing

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -30,7 +30,6 @@
     height: 210px;
     top: 50%;
     margin-top: -120px;
-    width: 100%;
 
     a {
       font-size: 22px;
@@ -137,7 +136,6 @@
       top: 0;
       margin-top: 0;
       width: 100%;
-      left: 60px;
 
       a {
         font-size: 22px;
@@ -147,7 +145,10 @@
         height: 51px;
         position: relative;
         text-decoration: none;
-        width: calc(100% / 5 - 20px);
+        width: calc(100% / 5 - 90px);
+        /* Center the icons */
+        margin-left: 65px;
+        margin-right: auto;
 
         i {
           transition: all 0.3s ease-out;
